<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity4_Layout"
    tools:context=".Activity4">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_marginTop="56dp"
        android:id="@+id/listView"
        android:layout_height="match_parent" />
</RelativeLayout>