<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/activity3_Layout"
    android:background="@drawable/background"
    tools:context=".Activity3">



    <TextView
        android:id="@+id/newResidentForm"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:textSize="30dp"
        android:textColor="@color/grey"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:text="New Resident Form" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="Fist name:"
        android:id="@+id/fn"
        android:layout_below="@+id/newResidentForm"
        android:layout_marginLeft="50dp"
        android:textSize="20dp"/>



    <EditText
        android:layout_width="170dp"
        android:layout_toRightOf="@+id/fn"
        android:layout_height="40dp"
        android:id="@+id/et_firstName"
        android:maxLines="1"
        android:hint="e.g. Joeseph"
        android:padding="10dp"
        android:layout_marginTop="90dp"
        android:inputType="textPersonName"
        android:layout_gravity="center"
        android:background="@color/white"
        />


    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="Last name:   "
        android:id="@+id/ln"
        android:layout_below="@+id/fn"
        android:textSize="20dp"/>

    <EditText
        android:layout_width="170dp"
        android:layout_below="@+id/et_firstName"
        android:layout_height="40dp"
        android:id="@+id/et_lastName"
        android:hint="e.g. Smith"
        android:layout_gravity="center"
        android:maxLines="1"
        android:layout_toRightOf="@+id/ln"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        android:background="@color/white"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:text="Date of birth:"
        android:id="@+id/dob"
        android:layout_below="@+id/ln"
        android:textSize="20dp"/>


    <TextView
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:id="@+id/et_DOB"
        android:layout_toRightOf="@+id/dob"
        android:layout_below="@+id/et_lastName"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="18dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:background="@color/white"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/calendaricon"
        android:layout_toRightOf="@+id/dob"
        android:layout_below="@+id/et_lastName"
        android:layout_marginTop="19dp"
        android:layout_marginLeft="125dp"
        android:id="@+id/datePickerButton"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="Weight:"
        android:id="@+id/weight"
        android:layout_below="@+id/dob"
        android:textSize="20dp"/>

    <EditText
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_below="@+id/et_DOB"
        android:id="@+id/et_weight"
        android:hint="in kg"
        android:layout_gravity="center"
        android:maxLines="1"
        android:padding="10dp"
        android:layout_toRightOf="@+id/weight"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:background="@color/white"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="Height:"
        android:id="@+id/height"
        android:layout_below="@+id/weight"
        android:textSize="20dp"/>

    <EditText
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:id="@+id/et_height"
        android:maxLines="1"
        android:hint="in cm"
        android:layout_gravity="center"
        android:layout_below="@+id/et_weight"
        android:layout_toRightOf="@+id/height"
        android:padding="10dp"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:background="@color/white"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="Gender:"
        android:id="@+id/gender"
        android:layout_below="@+id/height"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:id="@+id/GenderEditBox"
        android:maxLines="1"
        android:layout_gravity="center"
        android:layout_below="@+id/height"
        android:layout_toRightOf="@+id/height"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"/>


    <Spinner
        android:id="@+id/et_gender"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_below="@+id/et_height"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/gender" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_gender"
        android:text="Submit"
        android:gravity="center"
        android:layout_marginTop="90dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/deep_orange"
        android:layout_centerHorizontal="true"
        />






</RelativeLayout>