<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/activity5_Layout"
    android:layout_height="match_parent"
    android:background="@drawable/background_i"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity5">


    <TextView
        android:id="@+id/printPageTitle"
        android:layout_width="match_parent"
        android:textSize="30dp"
        android:layout_marginTop="45dp"
        android:textColor="@color/very_deep_orange"
      android:layout_marginLeft="50dp"
        android:autoSizeMaxTextSize="30dp"
        android:layout_height="35dp"
        android:text="Resident information" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="Name: "
        android:id="@+id/nm"
        android:layout_below="@+id/printPageTitle"
        android:layout_marginLeft="50dp"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/printFullName"
        android:layout_toRightOf="@+id/nm"
        android:layout_below="@+id/printPageTitle"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        />

    <TextView
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="Age: "
        android:id="@+id/age"
        android:textStyle="bold"
        android:layout_below="@+id/nm"
        android:layout_marginLeft="50dp"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/printAge"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/nm"
        android:layout_toRightOf="@+id/age"
        android:textSize="20dp"
        />

    <TextView
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/printAge"
        android:text="BMI: "
        android:textStyle="bold"
        android:id="@+id/bmi"
        android:layout_below="@+id/nm"
        android:layout_marginLeft="60dp"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/bmi"
        android:id="@+id/printBMI"
        android:layout_below="@+id/nm"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        />

    <TextView
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="Gender: "
        android:textStyle="bold"
        android:id="@+id/gender"
        android:layout_below="@+id/age"
        android:layout_marginLeft="50dp"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/gender"
        android:id="@+id/printGender"
        android:layout_below="@+id/age"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizentalDot"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/printGender"/>



    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view3"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/printGender"
        android:layout_toEndOf="@id/horizentalDot"
        android:backgroundTint="@color/very_deep_orange"
        android:layout_marginRight="40dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        card_view:cardCornerRadius="8dp">


        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:id="@+id/details"

            android:src="@drawable/ic_baseline_format_list_bulleted_24"/>
        <TextView
            android:id="@+id/info_text3"
            android:layout_width="match_parent"
            android:text="Details"
            android:textStyle="bold"
            android:textSize="14dp"
            android:layout_alignLeft="@+id/image2"
            android:layout_alignTop="@+id/image2"
            android:layout_alignRight="@+id/image2"
            android:layout_alignBottom="@+id/image2"
            android:textColor="@color/black"
            android:gravity="center|bottom"
            android:layout_height="match_parent"
            />
    </androidx.cardview.widget.CardView>




    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/deep_blue"
        android:layout_below="@+id/printGender"
        android:layout_marginTop="100dp"
        android:layout_toStartOf="@id/horizentalDot"
        android:layout_marginRight="20dp"
        card_view:cardCornerRadius="8dp">


        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:id="@+id/questionair"
            android:src="@drawable/ic_baseline_contact_support_24"/>

        <TextView
            android:id="@+id/info_text2"
            android:layout_width="match_parent"
            android:text="Questionnaire"
            android:layout_alignLeft="@+id/image1"
            android:layout_alignTop="@+id/image1"
            android:layout_alignRight="@+id/image1"
            android:layout_alignBottom="@+id/image1"
            android:gravity="center|bottom"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:layout_alignEnd="@+id/image1" />
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view4"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/card_view2"
        android:layout_toEndOf="@id/horizentalDot"
        android:backgroundTint="@color/deep_green"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        card_view:cardCornerRadius="8dp">


        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/writeNote"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_edit_note_24"/>
        <TextView
            android:id="@+id/info_text4"
            android:layout_width="match_parent"
            android:text="Write a note"
            android:textStyle="bold"
            android:textSize="14dp"
            android:layout_alignLeft="@+id/image2"
            android:layout_alignTop="@+id/image2"
            android:layout_alignRight="@+id/image2"
            android:layout_alignBottom="@+id/image2"
            android:textColor="@color/black"
            android:gravity="center|bottom"
            android:layout_height="match_parent"
            />
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/red"
        android:layout_toStartOf="@id/horizentalDot"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/card_view3"
        android:layout_marginTop="80dp"
        card_view:cardCornerRadius="8dp">


        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:id="@+id/deleteResidentButton"
            android:src="@drawable/ic_baseline_delete_24"/>

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:text="Delete"
            android:layout_alignLeft="@+id/image1"
            android:layout_alignTop="@+id/image1"
            android:layout_alignRight="@+id/image1"
            android:layout_alignBottom="@+id/image1"
            android:gravity="center|bottom"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:layout_alignEnd="@+id/image1" />
    </androidx.cardview.widget.CardView>


</RelativeLayout>