...
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:background="@drawable/background_e"
    android:id="@+id/activity7_Layout"
    tools:context=".Activity7">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
...
        android:layout_gravity="center_horizontal"
        android:text="YES"
        android:backgroundTint="@color/deep_orange"
        android:textColor="#fff"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="24dp"
        android:id="@+id/choiceYes"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="NO"
        android:backgroundTint="@color/deep_orange"
...
