<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_g"
    android:id="@+id/activity8_Layout"
    tools:context=".Activity8">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Result"
        android:textSize="35dp"
        android:textStyle="bold"
        android:id="@+id/resultTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textColor="@color/black"></TextView>


    <TextView
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="480dp"
        android:layout_marginTop="220dp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:textSize="24sp"
        android:padding="8dp"
        android:layout_marginBottom="40dp"
        android:id="@+id/result_txt"></TextView>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/deep_orange"
            android:layout_below="@id/resultTitle"
            android:layout_marginTop="250dp"
            android:layout_marginLeft="290dp"
            android:clickable="true"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            android:layout_marginRight="36dp"

            tools:ignore="VectorDrawableCompat" />

    />




</RelativeLayout>